log
Fri 10 May 2024 12:19:41 AM UTC: 
 tests:  1|8
total_score: 0/70
bd0c701
Fri 10 May 2024 01:43:22 AM UTC: 
 treemap.c | 23 +++++++++++++++--------
 1 file changed, 15 insertions(+), 8 deletions(-)
 tests:  4|7
total_score: 5/70
851bffa
Fri 10 May 2024 01:52:37 AM UTC: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:69:59: error: expected statement before ‘)’ token
   69 |             if (tree->lower_than(key,aux->pair->key) == 1))
      |                                                           ^
treemap.c:82:13: error: ‘else’ without a previous ‘if’
   82 |             else
      |             ^~~~
treemap.c:84:17: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   84 |                 if (aux->right == NULL);
      |                 ^~
treemap.c:85:17: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   85 |                 {
      |                 ^
treemap.c:90:17: error: ‘else’ without a previous ‘if’
   90 |                 else
      |                 ^~~~
cc1: all warnings being treated as errors
Compilation failed
52461d5
Fri 10 May 2024 01:53:03 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:69:59: error: expected statement before ‘)’ token
   69 |             if (tree->lower_than(key,aux->pair->key) == 1))
      |                                                           ^
treemap.c:82:13: error: ‘else’ without a previous ‘if’
   82 |             else
      |             ^~~~
Compilation failed
3d45b21
Fri 10 May 2024 01:53:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
9dd9e5c
Fri 10 May 2024 02:13:17 AM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  5|6
total_score: 5/70
267d5f3
Fri 10 May 2024 02:46:22 AM UTC: 
 treemap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  3|7
total_score: 5/70
841870e
Fri 10 May 2024 02:55:55 AM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
f931107
Fri 10 May 2024 03:20:23 AM UTC: 
 treemap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  12|5
total_score: 20/70
0ce18aa
Fri 10 May 2024 03:27:57 AM UTC: 
 treemap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:188:19: error: ‘TreeNode’ has no member named ‘aux’
  188 |         return aux->aux;
      |                   ^~
Compilation failed
ed935cd
